--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
         "argsIgnorePattern": "_"
       }
     ],
+    "no-useless-constructor": "off",
     "@typescript-eslint/naming-convention": [
       "error",
       {
